# reef-chain-test

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
hardhat-tests/: hardhat.config.ts  package.json
hardhat-tests/scripts/: deploy.ts
tests/: config.py  conftest.py  storage.py  tps.py  utils.py
tests/assets/: erc20_deployment_bytecode.txt  hardhat.yaml  postgres.yaml  reef-local-network.yaml
tests/features/: evm.feature  hardhat.feature  staking.feature  transfer.feature
tests/step_defs/: test_evm.py  test_hardhat.py  test_staking.py  test_transfer.py
