[tool.poetry]
name = "reef-test"
version = "0.1.0"
description = ""
authors = ["frisitano <francesco.risitano95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-bdd = "^4.1.0"
pylint = "^2.11.1"
pytest = "^5.2"
black = "^21.9b0"
flake8 = "^3.9.2"
ipython = "^7.27.0"
pre-commit = "^2.15.0"
reef-interface = { git = "https://github.com/reef-defi/py-reef-interface.git", branch = "dependency-upgrade" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
